<resources>

    <string name="app_name">Dojo2019</string>

    <!-- ボタンの名称 -->
    <string name="home_name">編集</string>
    <string name="qr_view">QR表示</string>
    <string name="qr_read">QR読み取り</string>
    <string name="keep">保存</string>

    <!-- 入力欄の名称 -->
    <string name="input_github">twitter</string>
    <string name="input_twitter">github</string>
    <string name="input_name">name</string>
    <string name="test1">test</string>
    <string name="list">list</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="title_home">HOME</string>
    <string name="title_dashboard">QRCODE</string>
    <string name="title_notifications">LIST</string>


</resources>