<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity">

    <Button
            android:text="@string/home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="200dp"
            app:layout_constraintEnd_toStartOf="@+id/button2" android:layout_marginEnd="8dp"
            android:layout_marginTop="500dp" app:layout_constraintTop_toTopOf="parent"
    />
    <Button
            android:text="@string/qr_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_marginBottom="200dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="setScreenQR"
            android:layout_marginTop="500dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/qr_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="200dp"
            app:layout_constraintStart_toEndOf="@+id/button2" android:layout_marginStart="8dp"
            android:layout_marginTop="500dp" app:layout_constraintTop_toTopOf="parent"
            android:onClick="setScreenQRRead"/>
    <Button
            android:text="@string/keep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:onClick="onClickKeep" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text3"/>
    <Button
            android:text="@string/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:onClick="setScreenList"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/text1" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1" android:hint="@string/input_name"
            android:inputType="textPersonName"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/text2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text1" android:hint="@string/input_github"
            android:inputType="textUri"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/text3" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text2" android:layout_marginTop="32dp"
            android:hint="@string/input_twitter" android:inputType="textUri"/>

</androidx.constraintlayout.widget.ConstraintLayout>