<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ListActivity">
    <Button
            android:text="@string/home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="200dp"
            app:layout_constraintEnd_toStartOf="@+id/button2" android:layout_marginEnd="8dp"
            android:layout_marginTop="500dp" app:layout_constraintTop_toTopOf="parent"
    />
    <Button
            android:text="@string/qr_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_marginBottom="200dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="setScreenQR"
            android:layout_marginTop="500dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/qr_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="200dp"
            app:layout_constraintStart_toEndOf="@+id/button2" android:layout_marginStart="8dp"
            android:layout_marginTop="500dp" app:layout_constraintTop_toTopOf="parent"
            android:onClick="setScreenQRRead"/>
    <Button
            android:text="@string/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button2"/>
    <TextView
            android:text="@string/test1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"/>
</androidx.constraintlayout.widget.ConstraintLayout>
